--- a/modules/common/src/main/res/values/dimen.xml
+++ b/modules/common/src/main/res/values/dimen.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_18">18sp</dimen>
+    <dimen name="text_24">24sp</dimen>
+    <dimen name="text_36">36sp</dimen>
 
     <dimen name="space_2">2dp</dimen>
+    <dimen name="space_4">4dp</dimen>
+    <dimen name="space_8">8dp</dimen>
+    <dimen name="space_10">10dp</dimen>
+    <dimen name="space_20">20dp</dimen>
+    <dimen name="space_40">40dp</dimen>
 
     <dimen name="size_2">2dp</dimen>
+    <dimen name="size_48">48dp</dimen>
+    <dimen name="size_200">200dp</dimen>
+
+    <!-- Common -->
+    <dimen name="button_background_radius">10dp</dimen>
 </resources>
