--- a/modules/common/src/main/res/layout/view_music_category_horizontal_scrollable.xml
+++ b/modules/common/src/main/res/layout/view_music_category_horizontal_scrollable.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/space_10">
+    android:background="@drawable/music_category_card_shape"
+    android:padding="@dimen/space_10">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/viewCategoryCategoryTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="@dimen/space_10"
         android:textColor="@color/buttonBlueBackgroundGradientStart"
         android:textSize="@dimen/text_24"
         android:textStyle="bold"
@@ -24,7 +26,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="@dimen/space_10"
         android:foreground="?attr/selectableItemBackground"
         android:gravity="center"
         android:paddingHorizontal="@dimen/space_40"
@@ -33,12 +34,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/viewCategoryRecyclerViewMusicItemsHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_10"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/viewCategoryButtonSeeAll" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/viewCategoryRecyclerViewMusicItemsHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/space_10"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/viewCategoryButtonSeeAll" />
 </androidx.constraintlayout.widget.ConstraintLayout>
