--- a/modules/common/src/main/res/layout/view_music_composition.xml
+++ b/modules/common/src/main/res/layout/view_music_composition.xml
@@ -3,16 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/music_composition_card_shape">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/viewMusicItemImage"
-        android:layout_width="@dimen/size_200"
-        android:layout_height="@dimen/size_200"
-        android:layout_margin="@dimen/space_4"
-        android:padding="@dimen/space_8"
+        android:layout_width="@dimen/size_160"
+        android:layout_height="@dimen/size_120"
+        android:padding="@dimen/space_4"
         android:src="@drawable/ic_no_image_24"
-        app:contentPadding="@dimen/space_4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,7 +26,7 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
-        android:paddingTop="@dimen/space_10"
+        android:paddingTop="@dimen/space_4"
         android:textSize="@dimen/text_18"
         android:textStyle="normal"
         app:layout_constrainedWidth="true"
@@ -42,7 +41,7 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
-        android:paddingTop="@dimen/space_10"
+        android:paddingTop="@dimen/space_4"
         android:textSize="@dimen/text_18"
         android:textStyle="normal"
         app:layout_constrainedWidth="true"
@@ -57,7 +56,7 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
-        android:paddingTop="@dimen/space_10"
+        android:paddingTop="@dimen/space_4"
         android:textSize="@dimen/text_18"
         android:textStyle="normal"
         app:layout_constrainedWidth="true"
@@ -72,7 +71,7 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
-        android:paddingTop="@dimen/space_10"
+        android:paddingTop="@dimen/space_4"
         android:textSize="@dimen/text_18"
         android:textStyle="normal"
         app:layout_constrainedWidth="true"
