--- a/modules/common/src/main/res/layout/view_music_item.xml
+++ b/modules/common/src/main/res/layout/view_music_item.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:shapeAppearanceOverlay="@style/roundedImageView"
-    app:strokeColor="@color/grey"
-    app:strokeWidth="@dimen/size_2">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <lt.vianet.musicapp.modules.common.view.MusicCompositionView
         android:id="@+id/viewMusicComposition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingEnd="@dimen/space_10"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
