Added RecyclerView to Music screen; minor MusicAdapter refactoring

--- a/modules/common/src/main/res/layout/view_music_composition.xml
+++ b/modules/common/src/main/res/layout/view_music_composition.xml
@@ -26,7 +26,6 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
-        android:paddingTop="@dimen/space_4"
         android:textSize="@dimen/text_18"
         android:textStyle="normal"
         app:layout_constrainedWidth="true"
@@ -41,9 +40,8 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
-        android:paddingTop="@dimen/space_4"
-        android:textSize="@dimen/text_18"
-        android:textStyle="normal"
+        android:textSize="@dimen/text_14"
+        android:textStyle="bold"
         app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,8 +54,7 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
-        android:paddingTop="@dimen/space_4"
-        android:textSize="@dimen/text_18"
+        android:textSize="@dimen/text_14"
         android:textStyle="normal"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="@id/viewMusicItemLength"
@@ -71,8 +68,7 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
-        android:paddingTop="@dimen/space_4"
-        android:textSize="@dimen/text_18"
+        android:textSize="@dimen/text_14"
         android:textStyle="normal"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="@id/viewMusicItemWeight"
