--- a/modules/common/src/main/res/values/dimen.xml
+++ b/modules/common/src/main/res/values/dimen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="text_14">14sp</dimen>
     <dimen name="text_18">18sp</dimen>
     <dimen name="text_24">24sp</dimen>
     <dimen name="text_36">36sp</dimen>
