--- a/modules/features/music/src/main/res/layout/fragment_music.xml
+++ b/modules/features/music/src/main/res/layout/fragment_music.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipeRefreshLayoutMusic"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,12 +11,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <lt.vianet.musicapp.modules.common.view.MusicCategoryHorizontalScrollableView
-            android:id="@+id/scrollableViewMusicCategory"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewMusicCategories"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@id/textViewTitleStorage"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/textViewTitleStorage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/space_10"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:paddingTop="@dimen/space_10"
+            android:text="@string/music.screen.title.storage"
+            android:textSize="@dimen/text_24"
+            android:textStyle="normal"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="Storage" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
