--- a/modules/common/src/main/res/values/colors.xml
+++ b/modules/common/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#A8A8A8</color>
+    <color name="lightGrey">#E5E5E5</color>
 
     <!-- Buttons -->
     <color name="disabledButtonText">#808080</color>
